@@ -3,7 +3,7 @@ package com.yahoo.vespa.model.application.validation;
 
 import org.w3c.dom.Document;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.jar.JarFile;
 import java.util.jar.Manifest;
 import java.util.logging.Level;
@@ -18,7 +18,7 @@ public class PublicApiBundleValidator extends AbstractBundleValidator {
         String nonPublicApiAttribute = mf.getMainAttributes().getValue("X-JDisc-Non-PublicApi-Import-Package");
         if (nonPublicApiAttribute == null) return;
 
-        var nonPublicApisUsed = Arrays.asList(nonPublicApiAttribute.split(","));
+        var nonPublicApisUsed = List.of(nonPublicApiAttribute.split(","));
         if (! nonPublicApisUsed.isEmpty()) {
             log(context.deployState(), Level.WARNING, "Jar file '%s' uses non-public Vespa APIs: %s", filename(jar), nonPublicApisUsed);
         }
