@@ -12,13 +12,11 @@ import com.yahoo.schema.document.SDField;
 import com.yahoo.schema.document.TemporarySDField;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 
-import static java.util.Collections.emptyMap;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 /**
@@ -63,7 +61,7 @@ public class SchemaOrdererTestCase extends AbstractSchemaTestCase {
     private static Schema createSchema(String name, Map<String, Schema> schemas) {
         Schema schema = new Schema(name, MockApplicationPackage.createEmpty());
         SDDocumentType document = new SDDocumentType(name);
-        document.setDocumentReferences(new DocumentReferences(emptyMap()));
+        document.setDocumentReferences(new DocumentReferences(Map.of()));
         schema.addDocument(document);
         schemas.put(schema.getName(), schema);
         return schema;
@@ -74,9 +72,8 @@ public class SchemaOrdererTestCase extends AbstractSchemaTestCase {
     }
 
     private static void assertOrder(List<String> expectedSearchOrder, List<String> inputNames) {
-        inputNames.sort((a, b) -> a.compareTo(b));
         Map<String, Schema> schemas = createSchemas();
-        List<Schema> inputSchemas = inputNames.stream()
+        List<Schema> inputSchemas = inputNames.stream().sorted()
                                               .map(schemas::get)
                                               .map(Objects::requireNonNull)
                                               .toList();
@@ -88,7 +85,6 @@ public class SchemaOrdererTestCase extends AbstractSchemaTestCase {
         assertEquals(expectedSearchOrder, actualSearchOrder);
     }
 
-    @SuppressWarnings("deprecation")
     private static void createDocumentReference(Schema from, Schema to, String refFieldName) {
         SDDocumentType fromDocument = from.getDocument();
         SDField refField = new TemporarySDField(fromDocument, refFieldName, NewDocumentReferenceDataType.forDocumentName(to.getName()));
@@ -102,44 +98,44 @@ public class SchemaOrdererTestCase extends AbstractSchemaTestCase {
 
     @Test
     void testPerfectOrderingIsKept() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
-                Arrays.asList("grandParent", "mother", "father", "daughter", "son", "product", "pc", "alone"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
+                List.of("grandParent", "mother", "father", "daughter", "son", "product", "pc", "alone"));
     }
 
     @Test
     void testOneLevelReordering() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
-                Arrays.asList("grandParent", "daughter", "son", "mother", "father", "pc", "product", "alone"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
+                List.of("grandParent", "daughter", "son", "mother", "father", "pc", "product", "alone"));
     }
 
     @Test
     void testMultiLevelReordering() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
-                Arrays.asList("daughter", "son", "mother", "father", "grandParent", "pc", "product", "alone"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
+                List.of("daughter", "son", "mother", "father", "grandParent", "pc", "product", "alone"));
     }
 
     @Test
     void testAloneIsKeptInPlaceWithMultiLevelReordering() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
-                Arrays.asList("alone", "daughter", "son", "mother", "father", "grandParent", "pc", "product"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
+                List.of("alone", "daughter", "son", "mother", "father", "grandParent", "pc", "product"));
     }
 
     @Test
     void testPartialMultiLevelReordering() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
-                Arrays.asList("daughter", "grandParent", "mother", "son", "father", "product", "pc", "alone"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
+                List.of("daughter", "grandParent", "mother", "son", "father", "product", "pc", "alone"));
     }
 
     @Test
     void testMultilevelReorderingAccrossHierarchies() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
-                Arrays.asList("daughter", "pc", "son", "mother", "grandParent", "father", "product", "alone"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "son"),
+                List.of("daughter", "pc", "son", "mother", "grandParent", "father", "product", "alone"));
     }
 
     @Test
     void referees_are_ordered_before_referrer() {
-        assertOrder(Arrays.asList("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "accessory-pc", "son"),
-                Arrays.asList("accessory-pc", "daughter", "pc", "son", "mother", "grandParent", "father", "product", "alone"));
+        assertOrder(List.of("alone", "grandParent", "mother", "father", "daughter", "product", "pc", "accessory-pc", "son"),
+                List.of("accessory-pc", "daughter", "pc", "son", "mother", "grandParent", "father", "product", "alone"));
     }
 
 
