@@ -8,7 +8,6 @@ import org.junit.jupiter.api.io.TempDir;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -42,7 +41,7 @@ public class PublicApiBundleValidatorTest {
         assertThat(output, containsString("uses non-public Vespa APIs: ["));
 
         // List of packages should be sorted
-        List<String> packages = Arrays.asList(output.substring(output.indexOf("[") + 1, output.indexOf("]")).split(", "));
+        List<String> packages = List.of(output.substring(output.indexOf("[") + 1, output.indexOf("]")).split(", "));
         assertThat(packages, hasSize(2));
         assertThat(packages, contains("ai.vespa.lib.non_public", "com.yahoo.lib.non_public"));
     }
